--- a/src/main/resources/templates/administratorsDistrict.html
+++ b/src/main/resources/templates/administratorsDistrict.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="css/scientistMain.css">
+    <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="../static/css/administratorEmployees.css">
     <title>MNU</title>
 </head>
 <body>
-<div class="scientists-grid">
-    <div class="flex-row employee-header">
+<div class="admin-employees-grid">
+    <div class="flex-row admin-header">
+        <a href="administratorsMenu.html">
+            <img alt="back" src="../static/images/back.png" class="icon back-button round-button button_unpressed">
+        </a>
         <div class="employee-info"> Name Surname <br> Level: x</div>
         <div class="employee-notifications">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="50px">
@@ -36,9 +39,11 @@
             </svg>
         </div>
     </div>
-    <button class="scientists-grid__experiments grid-button button button_pressed">Experiments</button>
-    <button class="scientists-grid__articles grid-button button button_unpressed">Articles</button>
-    <a href="scientistsNewExperiment.html" class="scientists-grid__add grid-button button button_unpressed">Add Experiment</a>
+    <div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+            <!-- ДУМОЕМ................................................ -->
+        </svg>
+    </div>
 </div>
 </body>
 </html>
