--- a/src/main/resources/templates/managersMenu.html
+++ b/src/main/resources/templates/managersMenu.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="css/managerMenu.css">
+    <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="../static/css/managerMenu.css">
     <title>MNU</title>
 </head>
 <body>
@@ -34,8 +34,8 @@
                     <!-- x=11.8 for two-digit numbers -->
                 </g>
             </svg>
-            <img alt="Clients list" class="managers-grid__client-list" src="images/human_list_icon.png">
-            <img alt="Prawns list" class="managers-grid__prawn-list" src="images/alien_list_icon.png">
+            <img alt="Clients list" class="managers-grid__client-list" src="../static/images/human_list_icon.png">
+            <img alt="Prawns list" class="managers-grid__prawn-list" src="../static/images/alien_list_icon.png">
         </div>
     </div>
     <div class="managers-grid__buttons flexColumn">
