--- a/src/main/resources/templates/administratorsEmployees.html
+++ b/src/main/resources/templates/administratorsEmployees.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="css/administratorEmployees.css">
+    <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="../static/css/administratorEmployees.css">
     <title>MNU</title>
 </head>
 <body>
 <div class="admin-employees-grid">
     <div class="flex-row admin-header">
         <a href="administratorsMenu.html">
-            <img alt="back" src="images/back.png" class="icon back-button round-button button_unpressed">
+            <img alt="back" src="../static/images/back.png" class="icon back-button round-button button_unpressed">
         </a>
         <div class="employee-info"> Name Surname <br> Level: x</div>
         <div class="employee-notifications">
@@ -69,11 +69,11 @@
         </table>
     </div>
     <div class="admin-employees-grid__buttons flex-column">
-        <img alt="Add employee" id="add-button" class="button_pressed round-button icon" src="images/plus.png">
-        <img alt="Edit employees" id="edit-button" class="button_unpressed round-button icon" src="images/edit.svg">
+        <img alt="Add employee" id="add-button" class="button_pressed round-button icon" src="../static/images/plus.png">
+        <img alt="Edit employees" id="edit-button" class="button_unpressed round-button icon" src="../static/images/edit.svg">
         <img alt="Find employees" id="find-button" class="button_unpressed round-button icon"
-             src="images/magnifier.svg">
-        <img alt="Cash Rewards" id="reward-button" class="button_unpressed round-button icon" src="images/dollar.png">
+             src="../static/images/magnifier.svg">
+        <img alt="Cash Rewards" id="reward-button" class="button_unpressed round-button icon" src="../static/images/dollar.png">
     </div>
     <div class="admin-employees-grid__inputs flex-column">
         <div class="admin-employees-grid__inputs_add add-employees-inputs-grid flex-column">
