--- a/src/main/resources/templates/scientistsMain.html
+++ b/src/main/resources/templates/scientistsMain.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="css/prawnRegistration.css">
+    <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="../static/css/scientistMain.css">
     <title>MNU</title>
 </head>
 <body>
-    <div class="flex-row admin-header">
-        <a href="administratorsMenu.html">
-            <img alt="back" src="images/back.png" class="icon back-button round-button button_unpressed">
-        </a>
+<div class="scientists-grid">
+    <div class="flex-row employee-header">
         <div class="employee-info"> Name Surname <br> Level: x</div>
         <div class="employee-notifications">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="50px">
@@ -38,13 +36,9 @@
             </svg>
         </div>
     </div>
-    <div class="flex-column registration-box">
-        <input class="registration-item input_big" placeholder="Login">
-        <input type="password" class="registration-item input_big" placeholder="Password">
-        <input type="password" class="registration-item input_big" placeholder="Confirm password">
-        <input class="registration-item input_big" placeholder="Name">
-        <button class="registration-item button button_unpressed">Register</button>
-    </div>
+    <button class="scientists-grid__experiments grid-button button button_pressed">Experiments</button>
+    <button class="scientists-grid__articles grid-button button button_unpressed">Articles</button>
+    <a href="scientistsNewExperiment.html" class="scientists-grid__add grid-button button button_unpressed">Add Experiment</a>
 </div>
 </body>
 </html>
