squidward of coler

--- a/src/main/resources/templates/clientsShop.html
+++ b/src/main/resources/templates/clientsShop.html
@@ -9,7 +9,7 @@
 </head>
 <body style="margin: 7px 0">
 <div class="shop-header">
-    <a class="feedback" href="shop.html">Feedback</a>
+    <a class="feedback" href="clientsShop.html">Feedback</a>
     <span class="shop-header-flex-row">You are logged in as ****
             <img alt="Profile settings" class="shop-icon" src="../static/images/profile.png">
             <img alt="History" class="shop-icon" src="../static/images/history.svg">
