thymeleaf friendly css links

--- a/src/main/resources/templates/prawnRegistration.html
+++ b/src/main/resources/templates/prawnRegistration.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="../static/css/prawnRegistration.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/prawnRegistration.css}">
     <title>MNU</title>
 </head>
 <body>
