--- a/src/main/resources/templates/administratorsEmployees.html
+++ b/src/main/resources/templates/administratorsEmployees.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" th:href="@{/images/favicon.ico}" type="image/x-icon">
     <link rel="stylesheet" type="text/css" th:href="@{/css/administratorEmployees.css}">
+    <script rel="script" type="text/javascript" th:src="@{/js/administratorsEmployees.js}"></script>
     <title>MNU</title>
 </head>
 <body>
 <div class="admin-employees-grid">
     <div class="flex-row admin-header">
-        <a href="administratorsMenu.html">
-            <img alt="back" src="../static/images/back.png" class="icon back-button round-button button_unpressed">
+        <a th:href="@{/adminMenu}">
+            <img alt="back" th:src="@{/images/back.png}" class="icon back-button round-button button_unpressed">
         </a>
         <div class="employee-info"> Name Surname <br> Level: x</div>
         <div class="employee-notifications">
@@ -69,14 +70,14 @@
         </table>
     </div>
     <div class="admin-employees-grid__buttons flex-column">
-        <img alt="Add employee" id="add-button" class="button_pressed round-button icon" src="../static/images/plus.png">
-        <img alt="Edit employees" id="edit-button" class="button_unpressed round-button icon" src="../static/images/edit.svg">
+        <img alt="Add employee" id="add-button" class="button_pressed round-button icon" th:src="@{/images/plus.png}" onclick="setAddInterface()">
+        <img alt="Edit employees" id="edit-button" class="button_unpressed round-button icon" th:src="@{/images/edit.svg}" onclick="setEditInterface()">
         <img alt="Find employees" id="find-button" class="button_unpressed round-button icon"
-             src="../static/images/magnifier.svg">
-        <img alt="Cash Rewards" id="reward-button" class="button_unpressed round-button icon" src="../static/images/dollar.png">
+             th:src="@{/images/magnifier.svg}" onclick="setFindInterface()">
+        <img alt="Cash Rewards" id="reward-button" class="button_unpressed round-button icon" th:src="@{/images/dollar.png}" onclick="setCashInterface">
     </div>
     <div class="admin-employees-grid__inputs flex-column">
-        <div class="admin-employees-grid__inputs_add add-employees-inputs-grid flex-column">
+        <div id="add-interface" class="admin-employees-grid__inputs_add add-employees-inputs-grid flex-column">
             <input class="add-employees-inputs-grid__name" placeholder="Name">
             <input type="number" min="1" max="10" class="add-employees-inputs-grid__lvl" placeholder="Lvl">
             <input type="number" step="10" class="add-employees-inputs-grid__salary" placeholder="Salary">
@@ -100,11 +101,9 @@
             </select>
             <button class="button button_unpressed add-employees-inputs-grid__button">Add employee</button>
         </div>
-        <div class="admin-employees-grid__inputs_edit">
-
-        </div>
-        <div class="admin-employees-grid__inputs_find"></div>
-        <div class="admin-employees-grid__inputs_reward"></div>
+        <div id="edit-interface" class="admin-employees-grid__inputs_edit"></div>
+        <div id="find-interface" class="admin-employees-grid__inputs_find"></div>
+        <div id="cash-interface" class="admin-employees-grid__inputs_reward"></div>
     </div>
 </div>
 </body>
