--- a/src/main/resources/templates/managersMenu.html
+++ b/src/main/resources/templates/managersMenu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" th:href="@{/images/favicon.ico}" type="image/x-icon">
     <link rel="stylesheet" type="text/css" th:href="@{/css/managerMenu.css}">
     <title>MNU</title>
 </head>
@@ -34,13 +34,13 @@
                     <!-- x=11.8 for two-digit numbers -->
                 </g>
             </svg>
-            <img alt="Clients list" class="managers-grid__client-list" src="../static/images/human_list_icon.png">
-            <img alt="Prawns list" class="managers-grid__prawn-list" src="../static/images/alien_list_icon.png">
+            <img alt="Clients list" class="managers-grid__client-list" th:src="@{/images/human_list_icon.png}">
+            <img alt="Prawns list" class="managers-grid__prawn-list" th:src="@{/images/alien_list_icon.png}">
         </div>
     </div>
     <div class="managers-grid__buttons flexColumn">
         <a class="flex-column grid-button button button_unpressed">Purchase requests</a>
-        <a href="prawnRegistration.html"
+        <a th:href="@{/prawnRegister}"
            class="flex-column administrators-menu-grid__prawn-registration grid-button button button_unpressed">Prawns
             registrations</a>
         <a class="flex-column administrators-menu-grid__synthesized-confiscated-weapons grid-button button button_unpressed">Synthesized
