--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" th:href="@{/images/favicon.ico}" type="image/x-icon">
     <link rel="stylesheet" type="text/css" th:href="@{/css/auth.css}">
     <title>MNU</title>
 </head>
 <body class="login-page">
 <div class="flex-column" style="height: 100vh">
     <form action="#" th:action="@{/auth/register}" th:object="${form}" method="post" class="flex-column login-page__box">
-        <a class="login-page__back-link" href="index.html">< back</a>
+        <a class="login-page__back-link" th:href="@{/auth/login}">< back</a>
         <input th:field="*{username}" class="login-page__item input_big" placeholder="Login">
         <input th:field="*{password}" type="password" class="login-page__item input_big" placeholder="Password">
         <input th:field="*{email}" type="email" class="login-page__item input_big" placeholder="Email">
