--- a/src/main/resources/templates/scientistsNewExperiment.html
+++ b/src/main/resources/templates/scientistsNewExperiment.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" th:href="@{/images/favicon.ico}" type="image/x-icon">
     <link rel="stylesheet" type="text/css" th:href="@{/css/scientistNewExperiment.css}">
     <title>MNU</title>
 </head>
 <body>
 <div class="grid">
     <div class="flex-row header">
-        <a href="scientistsMain.html">
-            <img alt="back" src="../static/images/back.png" class="icon back-button round-button button_unpressed">
+        <a th:href="@{/sciMain}">
+            <img alt="back" th:src="@{/images/back.png}" class="icon back-button round-button button_unpressed">
         </a>
         <div class="info"> Name Surname <br> Level: x</div>
         <div class="notifications">
