prawn registration, draft of prawnMain, nasty labels

--- a/src/main/resources/templates/administratorsMenu.html
+++ b/src/main/resources/templates/administratorsMenu.html
@@ -46,7 +46,7 @@
         vacancies</a>
     <a class="flex-column administrators-menu-grid__synthesized-confiscated-weapons grid-button button button_unpressed">Synthesized
         & confiscated weapons</a>
-    <a href="prawnRegistration.html" class="flex-column administrators-menu-grid__prawn-registration grid-button button button_unpressed">Prawn
+    <a th:href="@{/prawnRegister}" class="flex-column administrators-menu-grid__prawn-registration grid-button button button_unpressed">Prawn
         registration</a>
     <a class="flex-column administrators-menu-grid__prawn-job-applications grid-button button button_unpressed">Prawns'
         job applications</a>
