--- a/src/main/resources/templates/administrators/admin__district.html
+++ b/src/main/resources/templates/administrators/admin__district.html
@@ -4,14 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" th:href="@{/images/favicon.ico}" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/managerMenu.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/administrators/admin__district.css}">
     <title>MNU</title>
 </head>
 <body>
-<div class="managers-grid">
-    <div class="flex-row managers-grid__header">
+<div class="admin-employees-grid">
+    <div class="flex-row admin-header">
+        <a th:href="@{/adminMenu}">
+            <img alt="back" th:src="@{/images/back.png}" class="icon back-button round-button button_unpressed">
+        </a>
         <div class="employee-info"> Name Surname <br> Level: x</div>
-        <div class="employee-notifications icon-row">
+        <div class="employee-notifications">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="50px">
                 <path d="M 16 7
             a 5.38 5.38 0 0 0 -4.46 -4.85
@@ -34,21 +37,12 @@
                     <!-- x=11.8 for two-digit numbers -->
                 </g>
             </svg>
-            <img alt="Clients list" class="managers-grid__client-list" th:src="@{/images/human_list_icon.png}">
-            <img alt="Prawns list" class="managers-grid__prawn-list" th:src="@{/images/alien_list_icon.png}">
         </div>
     </div>
-    <div class="managers-grid__buttons flexColumn">
-        <a class="flex-column grid-button button button_unpressed">Purchase requests</a>
-        <a th:href="@{/prawnRegister}"
-           class="flex-column administrators-menu-grid__prawn-registration grid-button button button_unpressed">Prawns
-            registrations</a>
-        <a class="flex-column administrators-menu-grid__synthesized-confiscated-weapons grid-button button button_unpressed">Synthesized
-            & confiscated weapons</a>
-        <a class="flex-column administrators-menu-grid__prawn-job-applications grid-button button button_unpressed">Prawns'
-            job applications</a>
-        <a class="flex-column grid-button button button_unpressed">Equipment
-            change</a>
+    <div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+            <!-- ДУМОЕМ................................................ -->
+        </svg>
     </div>
 </div>
 </body>
