--- a/src/main/resources/templates/administrators/admin__prawn-registration.html
+++ b/src/main/resources/templates/administrators/admin__prawn-registration.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" th:href="@{/images/favicon.ico}" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/prawnRegistration.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/administrators/admin__prawn-registration.css}">
     <title>MNU</title>
 </head>
 <body>
