--- a/src/main/resources/templates/customers/customer__shop.html
+++ b/src/main/resources/templates/customers/customer__shop.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" th:href="@{/images/favicon.ico}" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/shop.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/customers/customer__shop.css}">
     <title>MNU</title>
 </head>
 <body style="margin: 7px 0">
