--- a/src/main/resources/static/css/administrators/admin__prawn-registration.css
+++ b/src/main/resources/static/css/administrators/admin__prawn-registration.css
@@ -27,11 +27,6 @@ body {
     margin: 5px 0 auto 0;
 }
 
-.employee-notifications {
-    cursor: pointer;
-    margin: 5px auto auto 20px;
-}
-
 .button {
     color: black;
     text-decoration: none;
@@ -89,8 +84,7 @@ body {
 .flex-row{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .back-button {
@@ -100,10 +94,4 @@ body {
 
 .hidden {
     display: none;
-}
-
-@media (max-width: 1000px) {
-    .employee-notifications {
-        margin: 5px 0 auto auto;
-    }
 }
