--- a/src/main/resources/templates/managers/manager__menu.html
+++ b/src/main/resources/templates/managers/manager__menu.html
@@ -9,34 +9,8 @@
 </head>
 <body>
 <div class="managers-grid">
-    <div class="flex-row managers-grid__header">
+    <div class="managers-grid__header">
         <div class="employee-info"> Name Surname <br> Level: x</div>
-        <div class="employee-notifications icon-row">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="50px">
-                <path d="M 16 7
-            a 5.38 5.38 0 0 0 -4.46 -4.85
-            C 11.6 1.46 11.53 0 10 0
-            S 8.4 1.46 8.46 2.15
-            A 5.38 5.38 0 0 0 4 7
-            v 6
-            l -2 2
-            v 1
-            h 16
-            v -1
-            l -2 -2 z
-            m -6 13
-            a 3 3 0 0 0 3 -3
-            H 7
-            a 3 3 0 0 0 3 3 z"></path>
-                <g class="hidden">
-                    <circle fill="red" cx="15" cy="5" r="4"></circle>
-                    <text id="notificationsNumber" fill="white" x="13.5" y="7" font-size="6">9</text>
-                    <!-- x=11.8 for two-digit numbers -->
-                </g>
-            </svg>
-            <img alt="Clients list" class="managers-grid__client-list" th:src="@{/images/human_list_icon.png}">
-            <img alt="Prawns list" class="managers-grid__prawn-list" th:src="@{/images/alien_list_icon.png}">
-        </div>
     </div>
     <div class="managers-grid__buttons flexColumn">
         <a class="flex-column grid-button button button_unpressed">Purchase requests</a>
