--- a/src/main/resources/templates/scientists/sci__main.html
+++ b/src/main/resources/templates/scientists/sci__main.html
@@ -15,6 +15,7 @@
     <button class="scientists-grid__experiments grid-button button button_pressed">Experiments</button>
     <button class="scientists-grid__articles grid-button button button_unpressed">Articles</button>
     <a th:href="@{/sciExperiment}" class="scientists-grid__add grid-button button button_unpressed">Add Experiment</a>
+    <a th:href="@{/UNKNOWN}" class="scientists-grid__add grid-button button button_unpressed">Add Article</a>
 </div>
 </body>
 </html>
