--- a/src/main/resources/templates/scientists/sci__new-experiment.html
+++ b/src/main/resources/templates/scientists/sci__new-experiment.html
@@ -10,7 +10,7 @@
 <body>
 <div class="grid">
     <div class="flex-row header">
-        <a th:href="@{/sciMain}">
+        <a th:href="@{/sci/main}">
             <img alt="back" th:src="@{/images/back.png}" class="icon back-button round-button button_unpressed">
         </a>
         <div class="info"> Name Surname <br> Level: x</div>
