--- a/src/main/resources/templates/scientists/sci__main.html
+++ b/src/main/resources/templates/scientists/sci__main.html
@@ -14,8 +14,8 @@
     </div>
     <button class="scientists-grid__experiments grid-button button button_pressed">Experiments</button>
     <button class="scientists-grid__articles grid-button button button_unpressed">Articles</button>
-    <a th:href="@{/sciExperiment}" class="scientists-grid__add grid-button button button_unpressed">Add Experiment</a>
-    <a th:href="@{/UNKNOWN}" class="scientists-grid__add grid-button button button_unpressed">Add Article</a>
+    <a th:href="@{/sci/experiment}" class="scientists-grid__add grid-button button button_unpressed">Add Experiment</a>
+    <a th:href="@{/sci/article}" class="scientists-grid__add grid-button button button_unpressed">Add Article</a>
 </div>
 </body>
 </html>
