--- a/src/main/resources/templates/scientists/sci__new-article.html
+++ b/src/main/resources/templates/scientists/sci__new-article.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="flex-row header">
-    <a th:href="@{/sciMain}">
+    <a th:href="@{/sci/main}">
         <img alt="back" th:src="@{/images/back.png}" class="icon back-button round-button button_unpressed">
     </a>
     <div class="info"> Name Surname <br> Level: x</div>
