--- a/src/main/resources/templates/administrators/admin__menu.html
+++ b/src/main/resources/templates/administrators/admin__menu.html
@@ -16,7 +16,7 @@
     <a class="flex-column administrators-menu-grid__experiments-articles grid-button button button_unpressed">Experiments
         & Articles</a>
     <a class="flex-column administrators-menu-grid__clients-manufacturers grid-button button button_unpressed">Purchase & sale requests</a>
-    <a th:href="@{/employeeDB}"
+    <a th:href="@{/admin/employee}"
        class="flex-column administrators-menu-grid__employees grid-button button button_unpressed">Employees</a>
     <a class="flex-column administrators-menu-grid__prawn-vacancies grid-button button button_unpressed">Prawn
         vacancies</a>
